@@ -44,6 +44,7 @@
         <junit.version>6.0.3</junit.version>
         <junit4.version>4.13.2</junit4.version>
         <jacoco.version>0.8.14</jacoco.version>
+        <byte-buddy.version>1.17.8</byte-buddy.version>
         <mariadb.version>3.5.8</mariadb.version>
         <mockkVersion>1.14.9</mockkVersion>
         <ktlint.version>3.5.0</ktlint.version>
@@ -232,6 +233,12 @@
             <version>${mockkVersion}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy-agent</artifactId>
+            <version>${byte-buddy.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -360,7 +367,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>@{argLine} -Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading -Xshare:off --sun-misc-unsafe-memory-access=allow -Daws.java.v1.disableDeprecationAnnouncement=true</argLine>
+                    <argLine>@{argLine} -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar -Xshare:off --sun-misc-unsafe-memory-access=allow -Daws.java.v1.disableDeprecationAnnouncement=true</argLine>
                 </configuration>
             </plugin>
             <plugin>
